styling + refactor